
* Reduce the size of the "Salat" sub class by 20%, removed deprecated "getPrayTime" method, 
  that method name is now just an alias of the new "getPrayTime2" method.

* Drop the "pregPattern" method from the main "I18N_Arabic" class, it is too basic to 
  handle it in a standalone method, instead of that users may consult this FAQ page: 
  (http://www.ar-php.org/faq-php-arabic.html#regexp).

* Minor library examples enhancements includes: "Moon" example has day default value now.

  
What's new in ArPHP 3.5.0 (release date: Sep 1, 2012)
-----------------------------------------------------

* More accurate gender detection by add some formats like إفتعال and إفعال as 
  well as check the list of most common irregular Arabic female names.

* Transliteration from Arabic to English supports now: UNGEGN, UNGEGN+ (i.e. with
  diacritical marks), RJGC, SES, and ISO 233 standards.

* Enhance "Numbers" sub class to spell ordering numbers in Arabic idiom also.
  
* Add two extra methods to the "CharsetC" sub class to convert Arabic text from UTF-8 
  and ISO-8859-6 charset into HTML entities named as "iso2html" and "utf2html".
  
* "Salat" sub class delivers now extra output format by present times in UNIX timestamp 
  to provide users more flexibility in handle it.

* Tag HTML content if it is belong to a forum using the new "isForum" method in the 
  main "I18N_Arabic" class, currently it recognize only vBulletin.
  
* Fix the transliteration issue of ال precedes a word beginning with one of the
  "sun letters", and issue of ة when it used in combined words to Romanized as 
  t instead of h.

* Fix the question mark issue in the "swapEa" method in the "KeySwap" sub class, thanks
  to Al-Kindi project team <http://www.ar-php.org/stats/al-kindi> who reported this bug.

* Fix the losing new line issue in the "standard" method in the "Standard" sub class, thanks
  to Al-Kindi project team <http://www.ar-php.org/stats/al-kindi> who reported this bug.
